--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "node": "~4.1.2"
   },
   "bugs": {
-    "url": "https://github.com/fbsamples/messenger-platform-samples/issues"
+    "url": "https://github.com/mattmahowald/endo/issues"
   },
-  "homepage": "https://github.com/fbsamples/messenger-platform-samples#readme",
+  "homepage": "https://github.com/mattmahowald/endo#readme",
   "keywords": []
 }
